--- a/Exercise_1.ipynb
+++ b/Exercise_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Exercise 1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPLey28VnwnDDd4NbBVZQ7z",
+      "authorship_tag": "ABX9TyMRd8x3rtDoVEagBl8G7iIX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/AldrichRenzoBelen/DSA-58010/blob/main/Exercise_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Area for a Given Radius**"
+      ],
+      "metadata": {
+        "id": "DGm6ioYaYaUb"
+      }
     },
     {
       "cell_type": "code",
@@ -63,6 +72,15 @@
         "pizza = Circle (input())\n",
         "pizza.display()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Area for a Given Radius**"
+      ],
+      "metadata": {
+        "id": "5KTwwwDgYt_B"
+      }
     },
     {
       "cell_type": "code",
