--- a/Exercise_1.ipynb
+++ b/Exercise_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Exercise 1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMRd8x3rtDoVEagBl8G7iIX",
+      "authorship_tag": "ABX9TyMj/9l2OFTFWt88wJq+dYOd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SuquvyX6Tg1a",
-        "outputId": "9ec453f2-6b25-499e-9e5c-eb2f4f2b5bd6"
+        "outputId": "500dce0a-d04a-4a4e-bcde-564657044baa"
       },
       "outputs": [
         {
@@ -69,8 +69,8 @@
         "    print (\"The area of the circle is\", self.Area())\n",
         "\n",
         "pi = 3.14\n",
-        "pizza = Circle (input())\n",
-        "pizza.display()"
+        "cake = Circle (input())\n",
+        "cake.display()"
       ]
     },
     {
@@ -96,17 +96,17 @@
         "    print (\"The area of the circle is\", self.Area())\n",
         "\n",
         "pi = 3.14\n",
-        "pizza = Circle (input())\n",
-        "pizza.display()"
+        "cake = Circle (input())\n",
+        "cake.display()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wV3wNEWjVqXs",
-        "outputId": "09060292-7ef4-4eca-c9e1-55f4d4460fac"
+        "outputId": "68a41eac-9260-4f71-ca20-a6e8d4710fcf"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
