--- a/Exercise_1.ipynb
+++ b/Exercise_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Exercise 1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMj/9l2OFTFWt88wJq+dYOd",
+      "authorship_tag": "ABX9TyP+FQ6nN5jtyI4gv9kwlKlg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Area for a Given Radius**"
+        "# **Area for a Given Diameter**"
       ],
       "metadata": {
         "id": "5KTwwwDgYt_B"
